[package]
name = "chronilore-sycamore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = { version = "0.8.2" }
uuid = { version = "1.5.0", features = ["serde", "v4", "js"] }
wasm-bindgen = { version = "0.2.88" }
wasm-bindgen-futures = { version = "0.4.38" }
web-sys = { version = "0.3", features = [
	"AttestationConveyancePreference",
	"AuthenticatorSelectionCriteria",
	"AuthenticatorAttachment",
	"CredentialsContainer",
	"CredentialCreationOptions",
	"Document",
	"Element",
	"Event",
	"EventTarget",
	"HtmlDialogElement",
	"HtmlDocument",
	"Navigator",
	"PublicKeyCredentialCreationOptions",
	"PublicKeyCredentialParameters",
	"PublicKeyCredentialType",
	"PublicKeyCredentialRpEntity",
	"PublicKeyCredentialUserEntity",
	"Storage",
	"UserVerificationRequirement",
	"Window",
] }
