[package]
name = "demo-pure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75" }
axum = { version = "0.6.20", features = ["headers", "http2", "ws", "tokio"] }
axum-server = { version = "0.5.1" }
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors", "fs"] }
