[package]
name = "static-file-web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "^1" }
axum = { version = "^0", features = ["headers", "http2", "ws", "tokio"] }
axum-server = { version = "^0" }
tokio = { version = "^1", features = ["full"] }
tower-http = { version = "^0", features = ["cors", "fs"] }
