[package]
name = "sycamore9"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3.29" }
gloo-timers = { version = "0.3.0", features = ["futures"] }
sycamore = { version = "0.9.0-beta.2", features = ["suspense"] }
time = { version = "0.3.30", features = [
	"macros",
	"serde",
	"std",
	"local-offset",
	"wasm-bindgen",
	"parsing",
	"formatting",
] }
uuid = { version = "1.5.0", features = ["serde", "v4", "js"] }
wasm-bindgen = { version = "0.2.88" }
wasm-bindgen-futures = { version = "0.4.38" }
web-sys = { version = "0.3", features = [
	"AttestationConveyancePreference",
	"AuthenticatorSelectionCriteria",
	"AuthenticatorAttachment",
	"CredentialsContainer",
	"CredentialCreationOptions",
	"Document",
	"Element",
	"Event",
	"EventTarget",
	"HtmlDialogElement",
	"HtmlDocument",
	"MouseEvent",
	"Navigator",
	"PublicKeyCredentialCreationOptions",
	"PublicKeyCredentialParameters",
	"PublicKeyCredentialType",
	"PublicKeyCredentialRpEntity",
	"PublicKeyCredentialUserEntity",
	"Storage",
	"UserVerificationRequirement",
	"Window",
] }
